--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import '~flatpickr/dist/themes/airbnb.css';
 html,
 body {
   min-height: 100%;
@@ -21,4 +22,12 @@ code:not([class*='language-']):after {
 }
 code[class*='language-'] {
   padding: 0;
+}
+
+.flatpickr-input {
+  display: block;
+  width: 100%;
+  border: 1px solid aliceblue;
+  height: 34px;
+  color: black;
 }
