--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,53 @@ code[class*='language-'] {
   height: 34px;
   color: black;
 }
+
+
+/* $purple: #7367f0 !default; //$primary
+$green: #28c76f !default; //$success
+$blue: #00cfe8 !default; //$info
+$orange: #ff9f43 !default; //$warning
+$red: #ea5455 !default; //$danger */
+
+.back-error {
+  color: black !important;
+  background-color: red !important;
+}
+
+.back-success {
+  color:  "#7367f0" !important;
+   background-color: rgba( #7367f0, 0.12) !important;
+}
+
+.back-primary {
+  color:  yellow !important;
+  background: rgba(208,206,195,.5);
+}
+
+.back-info {
+  color:  #7367f0 !important;
+   background-color: #7367f0 !important;
+   .fc-event-main {
+      .fc-event-main-frame {
+        .fc-event-title-container {
+          .fc-event-title .fc-sticky {
+            color: #7367f0 !important
+          }
+        }
+      } 
+   }
+}
+
+.back-warning {
+  color:  #7367f0 !important;
+   background-color: rgba( #7367f0, 0.12) !important;
+}
+
+.back-secondary {
+  color:  #7367f0 !important;
+  background: rgba( #7367f0, 0.12) !important;
+}
+
+/* fc-event fc-event-draggable fc-event-resizable fc-event-start fc-event-end fc-event-future fc-daygrid-event fc-daygrid-block-event fc-h-event back-info {
+
+} */
