--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,7 @@ $blue: #00cfe8 !default; //$info
 $orange: #ff9f43 !default; //$warning
 $red: #ea5455 !default; //$danger */
 
-.back-error {
+/* .back-error {
   color: black !important;
   background-color: red !important;
 }
@@ -76,7 +76,7 @@ $red: #ea5455 !default; //$danger */
 .back-secondary {
   color:  #7367f0 !important;
   background: rgba( #7367f0, 0.12) !important;
-}
+} */
 
 /* fc-event fc-event-draggable fc-event-resizable fc-event-start fc-event-end fc-event-future fc-daygrid-event fc-daygrid-block-event fc-h-event back-info {
 
